UPDATE TO MAPS/ SPRITESHEETS