@@ -20,6 +20,14 @@
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.williamahartman</groupId>
+            <artifactId>jamepad</artifactId>
+            <version>1.3.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/Jamepad/Jamepad.jar</systemPath>
+        </dependency>
+
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>${javafx.version}</version>
@@ -46,13 +54,13 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>SplashVideoPlayer</mainClass> <!-- Change if needed -->
+                            <mainClass>SplashVideoPlayer</mainClass> <!-- Update if needed -->
                         </manifest>
                     </archive>
                 </configuration>
             </plugin>
 
-            <!-- Optional: Maven goal to run JavaFX app directly -->
+            <!-- JavaFX plugin for running and packaging -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -65,7 +73,10 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>Main</mainClass><!-- Update if needed -->
+                    <mainClass>Main</mainClass> <!-- Your main class -->
+                    <options>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
